[gd_scene load_steps=9 format=3 uid="uid://cn4adaj35aw6c"]

[ext_resource type="FontFile" uid="uid://suuv08lbmalh" path="res://ui/fonts/menu_font.otf" id="1_e0w3f"]
[ext_resource type="Script" path="res://ui/buttons/options/volume_setting/volume_setting.gd" id="1_kji4l"]
[ext_resource type="Texture2D" uid="uid://b3ojribws4xej" path="res://ui/buttons/options/volume_setting/volume-no-bar.png" id="2_v8i70"]
[ext_resource type="Texture2D" uid="uid://wq351fx033f0" path="res://ui/buttons/options/volume_setting/buttons/lower/low-volume_clicked.png" id="3_n11n4"]
[ext_resource type="Texture2D" uid="uid://0xeysjutbqwi" path="res://ui/buttons/options/volume_setting/buttons/lower/low-volume_unclicked.png" id="4_alxyg"]
[ext_resource type="FontFile" uid="uid://bcihgmugbfnan" path="res://ui/buttons/options/volume_setting/volume_font.otf" id="4_xchkh"]
[ext_resource type="Texture2D" uid="uid://c2vufny65p8m" path="res://ui/buttons/options/volume_setting/buttons/higher/high-volume_clicked.png" id="5_2sps5"]
[ext_resource type="Texture2D" uid="uid://t8rljmv8mcg7" path="res://ui/buttons/options/volume_setting/buttons/higher/high-volume_unclicked.png" id="6_3u4sv"]

[node name="VolumeSetting" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 217.0
offset_bottom = 115.0
script = ExtResource("1_kji4l")

[node name="SettingLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 216.0
offset_bottom = 51.0
theme_override_fonts/font = ExtResource("1_e0w3f")
theme_override_font_sizes/font_size = 50
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValuePanel" type="Control" parent="."]
anchors_preset = 0
offset_left = -272.0
offset_top = -312.0
offset_right = -232.0
offset_bottom = -272.0

[node name="Art" type="TextureRect" parent="ValuePanel"]
layout_mode = 0
offset_left = 338.0
offset_top = 368.0
offset_right = 421.0
offset_bottom = 422.0
texture = ExtResource("2_v8i70")

[node name="Text" type="Label" parent="ValuePanel"]
layout_mode = 0
offset_left = 355.0
offset_top = 374.0
offset_right = 403.0
offset_bottom = 417.0
theme_override_fonts/font = ExtResource("4_xchkh")
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DecreaseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 78.0
offset_right = 48.0
offset_bottom = 118.0
texture_normal = ExtResource("3_n11n4")
texture_pressed = ExtResource("4_alxyg")

[node name="IncreaseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 59.0
offset_right = 214.0
offset_bottom = 105.0
texture_normal = ExtResource("5_2sps5")
texture_pressed = ExtResource("6_3u4sv")

[connection signal="pressed" from="DecreaseButton" to="." method="_on_decrease_button_pressed"]
[connection signal="pressed" from="IncreaseButton" to="." method="_on_increase_button_pressed"]
